[package]
name = "pyfishsense"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyfishsense"
crate-type = ["cdylib"]

[dependencies]
fishsense = { git = "https://github.com/UCSD-E4E/fishsense.rs", version = "0.1.0" }
pyo3 = "0.20.0"
